Add validations for product model

--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -3,11 +3,11 @@
 one:
   title: MyString
   description: MyText
-  image_url: MyString
+  image_url: lorem.jpg
   price: 9.99
 
 two:
   title: MyString
   description: MyText
-  image_url: MyString
+  image_url: ruby.jpg
   price: 9.99
